<resources>
    <string name="app_name">E-MOSS</string>
    <string name="google_key">AIzaSyDOCmhjhvtLURfWgzk_GWSUvR18b3xVWeo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="for_pass">Forgot Password</string>
    <string name="or">OR</string>
    <string name="forgot_email">Forgot Email</string>
    <string name="still">Still not Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alternate_email_">Alternate Email</string>
    <string name="save_amp_next">Save</string>
    <string name="dashboard">Dash Board</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="government_yojanas">Government Yojanas</string>
    <string name="banks_services">Banks Services</string>
    <string name="payment_circular">Payment Circular</string>
    <string name="digital_bonofied">Digital Bonofied</string>
    <string name="notification">Notification</string>
    <string name="other_apps">Other Apps</string>
    <string name="locate_kiosk">Locate Kiosk</string>
    <string name="contact_us">Contact Us</string>
    <string name="faqs">Faqs</string>
    <string name="feedback">FeedBack</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="government_n_schemes">Government \n Schemes</string>
    <string name="yojanas">Yojanas</string>
    <string name="government_n_services">Government \n Services</string>
    <string name="government_events">Government Events</string>
    <string name="government_center_n_near_by">Government Center \n near by</string>
    <string name="success">Success</string>
    <string name="offline">offline</string>
    <string name="go_online">Go online</string>
    <string name="subscribe_service">Subscribe Service</string>
    <string name="kiosk_center">KIOSK center</string>
    <string name="app_info">App Info</string>
    <string name="share_this_app">Share this App</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="more_apps">More Apps</string>
    <string name="log_in_with">log in with...</string>
    <string name="by_singing_in_you_agree_to_terms_and_conditions_and_also_privacy_policy">by singing in you agree to terms and conditions and also Privacy policy...</string>
    <string name="don_t_you_have_account_yet_signup_here">Don\'t you have account yet? SignUp here...</string>
    <string name="all_data">All Data</string>
    <string name="enter_contact_no">Enter Contact No.</string>
    <string name="subject">Subject</string>
    <string name="enter_email_id_">Enter Email Id</string>
    <string name="subject_">Subject</string>
    <string name="enter_sub">Enter Subject</string>
    <string name="message_">Message</string>
    <string name="submit">Submit</string>
</resources>
